[package]
name = "dialogy"
version = "0.0.0"
repository = "https://github.com/Richienb/dialogy"
authors = ["Richie Bendall <richiebendall@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dialogy"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies.neon]
version = "0.5.0"
default-features = false
features = ["napi-runtime"]

[dependencies]
tinyfiledialogs = "3.3.10"
